src/tests/fixtures/resolver_context/ContextValueTypedAsString.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(ctx: string): string {
    return ctx;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueTypedAsString.invalid.ts:4:17 - error: Unexpected type for resolver argument. Resolver arguments must be typed with either an object literal (`{}`) or a reference to a named type.

4   greeting(ctx: string): string {
                  ~~~~~~
